--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
           <h2 class="major">Excel Tools</h2>
           <span class="video main">
             <video controls autoplay loop muted width="100%">
-              <source src="Videos/leave_tracker.mp4" type="video/mp4" />
+              <source src="
+                leave_tracker.mp4" type="video/mp4" />
               Your browser does not support the video tag.
             </video>
             <h3 class="major">Leave Tracker</h3>
@@ -75,7 +76,7 @@
 
           <span class="video main">
             <video controls autoplay loop muted width="100%">
-              <source src="Videos/leave_tracker_2.mp4" type="video/mp4" />
+              <source src="leave_tracker_2.mp4" type="video/mp4" />
               Your browser does not support the video tag.
             </video>
             <h3 class="major">Advance Leave Tracker</h3>
@@ -86,7 +87,7 @@
 
           <span class="video main">
             <video controls autoplay loop muted width="100%">
-              <source src="Videos/salary_tracker.mp4" type="video/mp4" />
+              <source src="salary_tracker.mp4" type="video/mp4" />
               Your browser does not support the video tag.
             </video>
             <h3 class="major">Salary Deduction Tracker</h3>
@@ -107,7 +108,7 @@
 
           <span class="video main">
             <video controls autoplay loop muted width="100%">
-              <source src="Videos/document_tracker.mp4" type="video/mp4" />
+              <source src="document_tracker.mp4" type="video/mp4" />
               Your browser does not support the video tag.
             </video>
             <h3 class="major">Documents Data Entry Form</h3>
@@ -116,7 +117,7 @@
 
           <span class="video main">
             <video controls autoplay loop muted width="100%">
-              <source src="Videos/text_splitter.mp4" type="video/mp4" />
+              <source src="text_splitter.mp4" type="video/mp4" />
               Your browser does not support the video tag.
             </video>
             <h3 class="major">Data Splitter</h3>
@@ -178,3 +179,4 @@
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
