--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <span class="image main"><img src="images/pic04.jpg" alt="" /></span>
           <p>Hello, my name is Ma. Ella Vergara.</p>
           <p>I’m a fast learner who embraces every challenge with dedication and heart. I believe that with passion and persistence, we can learn anything and continuously grow into the best version of ourselves.</p>
-          <p>I’m still on a journey to grow my experience and capabilities in Data Analytics. And I’m deeply committed to continuous learning and growth. With dedication and curiosity, I strive each day to improve and move closer to becoming the best in this field—because I believe there’s always something new to learn.</p>
+          <p>I’m still on a journey to grow my experience and capabilities in Reports & Data Analytics. And I’m deeply committed to continuous learning and growth. With dedication and curiosity, I strive each day to improve and move closer to becoming the best in this field—because I believe there’s always something new to learn.</p>
           <p>By the way, feel free to explore my <a href="#work">Projects! :)</a></p>
         </article>
 
@@ -179,4 +179,5 @@
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
 
