--- a/index.html
+++ b/index.html
@@ -49,15 +49,37 @@
           <p>By the way, feel free to explore my <a href="#work">Projects! :)</a></p>
         </article>
 
-        <!-- Work -->
-        <article id="work">
-          <h2 class="major">Projects</h2>
-          <p>Select a category to explore my works! :)</p>
-          <ul class="actions">
-            <li><a href="#excel" class="button">Excel Tools</a></li>
-            <li><a href="#macro" class="button">Macro Tools</a></li>
-          </ul>
-        </article>
+     <!-- Work -->
+<article id="work">
+  <h2 class="major">Projects</h2>
+  <p>Select a category to explore my works! :)</p>
+  <ul class="actions">
+    <li><a href="#excel" class="button">Excel Tools</a></li>
+    <li><a href="#macro" class="button">Macro Tools</a></li>
+    <li><a href="#dashboard" class="button">Dashboards</a></li>
+  </ul>
+</article>
+
+<!-- Dashboard -->
+<article id="dashboard">
+  <h2 class="major">Dashboards</h2>
+  <p>Interactive dashboards designed to visualize insights and help make data-driven decisions effortlessly.</p>
+
+  <span class="video main">
+    <video controls autoplay loop muted width="100%">
+      <source src="dashboard_sample.mp4" type="video/mp4" />
+      Your browser does not support the video tag.
+    </video>
+    <h3 class="major">Performance Dashboard</h3>
+  </span>
+  <p>This dashboard provides a real-time view of key performance indicators (KPIs), helping teams track progress and identify trends quickly. 
+     Designed with interactivity and clarity in mind, it makes complex data easy to understand and act upon.</p>
+
+  <ul class="actions">
+    <li><a href="#work" class="button">← Back to Projects</a></li>
+  </ul>
+</article>
+
 
         <!-- Excel Tools -->
         <article id="excel">
@@ -179,5 +201,6 @@
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
 
 
