--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         <!-- About -->
         <article id="about">
           <h2 class="major">About Me</h2>
-          <span class="image main"><img src="images/my_pic.png" alt="" /></span>
+          <span class="image main"><img src="images/my_pic.png" alt="" style="width:50%; height:auto;" /></span>
           <p>Hi, I’m Elay, a passionate data enthusiast and problem solver. I specialize in Excel automation, data analysis, and building tools that make workflows faster and smarter.</p>
         </article>
 
@@ -201,6 +201,7 @@
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
 
 
 
