--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <article id="about">
           <h2 class="major">About Me</h2>
           <span class="image main"><img src="images/my_pic.png" alt="" style="width:50%; height:auto;" /></span>
-          <p>Hi, I’m Elay, a passionate data enthusiast and problem solver. I specialize in Excel automation, data analysis, and building tools that make workflows faster and smarter.</p>
+          <p>Hi, I’m Elay! Are you here because you are interested with my Life? Sure! Let me walk you through it :) </p>
         </article>
 
         <!-- ✅ Simplified Contact -->
@@ -201,6 +201,7 @@
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
 
 
 
