--- a/index.html
+++ b/index.html
@@ -157,7 +157,9 @@
         <!-- About -->
         <article id="about">
           <h2 class="major">About Me</h2>
-          <span class="image main"><img src="images/my_pic.png" alt="" style="width:50%; height:auto;" /></span>
+          <span class="image main">
+  <img src="images/my_pic.png" alt="" style="width:50%; height:auto; display:block; margin:0 auto;" />
+</span>
           <p>Hi, I’m Elay! Are you here because you are interested with my Life? Sure! Let me walk you through it :) </p>
         </article>
 
@@ -201,6 +203,7 @@
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
 
 
 
