--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
           <span class="image main">
   <img src="images/my_pic.png" alt="" style="width:50%; height:auto; display:block; margin:0 auto;" />
 </span>
-          <p>Hi, I’m Elay! Are you here because you are interested with my Life? Sure! Let me walk you through it :) </p>
+          <p>Hi, I’m Elay! Are you here to learn a bit about my journey? Awesome! let me walk you through it! :) </p>
         </article>
 
         <!-- ✅ Simplified Contact -->
@@ -203,6 +203,7 @@
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
 
 
 
